# ESP32-Sensor-Applications

./: .gitignore  Makefile  README.md
.github/workflows/: esp32-build.yml
LED_blink/main/: led_blink.cpp
MLX90614/: CMakeLists.txt
MLX90614/main/: CMakeLists.txt  mlx90614_read_temp.cpp
RTOS/: README.md
RTOS/RTOS_multithreading_with_mutex/: CMakeLists.txt  README.md
RTOS/basic_RTOS_multithreading/: CMakeLists.txt  requirements.txt
RTOS/other_multithreading_ex/: CMakeLists.txt
blink/: Makefile
blink/main/: CMakeLists.txt  led_blink.c  led_blink.cpp
builtin_touch_sensor/: CMakeLists.txt  README.md
builtin_touch_sensor/main/: CMakeLists.txt  builtin_touch_sensor.c
button_LED/: CMakeLists.txt  README.md
button_LED/main/: CMakeLists.txt  button_LED.cpp  button_LED_cont.cpp
environmental_data_recorder/: CMakeLists.txt  README.md  sdkconfig
environmental_data_recorder/main/: CMakeLists.txt
environmental_data_recorder_app/: CMakeLists.txt  sdkconfig
environmental_data_recorder_app/main/: CMakeLists.txt  environmental_data_recorder_app.cpp
hc05_bluetooth/: CMakeLists.txt
hc05_bluetooth/main/: CMakeLists.txt  hc05_simple_ble.c  hc05_simple_ble.cpp
hc_sr04_ultrasonic_distance/: CMakeLists.txt
hc_sr04_ultrasonic_distance/main/: CMakeLists.txt  (+2 more)
lora_communication/: CMakeLists.txt
microSD_Card_logger/: CMakeLists.txt  sdkconfig
read_BME688/: CMakeLists.txt  README.md  read_serial_port.py  sdkconfig
servo_motor/: CMakeLists.txt
touch_sensor_interrupt/: CMakeLists.txt
wifi_time_sync_app/: CMakeLists.txt  sdkconfig
(+47 files in other folders)
